apps/paperless/postgre.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: postgres
  labels: postgres
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgre
        image: postgres:18.6-bookworm
        imagePullPolicy: IfNotPresent
