apps/paperless/valkey.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: valkey-deployment
  namespace: valkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers: 
      - name: valkey
        image: valkey/valkey:9.1.1-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
        volumeMounts:
          - name: valkey-data
            mountPath: /data
      volumes:
      - name: valkey-data
        persistentVolumeClaim:
          claimName: valkey-data
