apps/paperless/valkey-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey-service
  namespace: valkey
spec:
  type: ClusterIP
  selector:
      app: valkey
  ports:
  - name: valkey
    port: 6379
    targetPort: 6379
    protocal: tcp
