apps/paperless/paperless-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: paperless-ingress
  namespace: paperless
spec:
  ingressClassName: traefik
  rules:
  - host: paperless.lab
    http:
      paths:
      - backend:
          service:
            name: paperless-service
            port:
              number: 8888
        path: '/'
        pathType: Prefix
